# ezmsg-vispy

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: complex_image_vis_demo.py  histogram_vis_demo.py  image_vis_demo.py  line_vis_demo.py  multitrace_vis_demo.py
examples/frontends/: line_vis_frontend.py  line_vis_frontend.ui  ui_line_vis_frontend.py
ezmsg/vispy/: __init__.py
ezmsg/vispy/frontends/: main_window.py
ezmsg/vispy/helpers/: constants.py  plot_configs.py  ranged_pan_zoom.py  types.py
ezmsg/vispy/units/: application.py  histogram_vis.py  multi_line_vis.py
ezmsg/vispy/widgets/: bar_plot_widget.py  complex_image_widget.py  histogram_widget.py  image_widget.py  line_plot_widget.py  line_widget.py  multi_line_widget.py  multitrace_widget.py
src/ezmsg/vispy/: __init__.py
src/ezmsg/vispy/frontends/: main_window.py
src/ezmsg/vispy/helpers/: axis_widgets.py  channel_magnification.py  constants.py  plot_configs.py  ranged_pan_zoom.py
src/ezmsg/vispy/units/: application.py  complex_image_vis.py  histogram_vis.py  image_vis.py  line_vis.py  multi_line_vis.py  multitrace_vis.py  plot_vis.py
src/ezmsg/vispy/widgets/: bar_plot_widget.py  base_plot_widget.py  complex_image_widget.py  histogram_widget.py  image_widget.py  line_plot_widget.py  line_widget.py  multi_line_widget.py  multitrace_widget.py  spectrogram_widget.py
