[tool.poetry]
name = "ezmsg-vispy"
version = "0.1.1"
description = "Visualization tools for ezmsg using the vispy library."
authors = ["Peranich, Preston <pperanich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ezmsg", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
ezmsg = "^3.3.3"
numpy = "^1.19.5"
qdarkstyle = "^3.2.1"
pyqt6 = "^6.6.0"
vispy = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
