[project]
name = "ezmsg-vispy"
version = "0.3.2"
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ezmsg>=3.3.4",
  "numpy>=1.26.4",
  "qdarkstyle>=3.2.3",
  "vispy>=0.14.2",
  "pyopengl>=3.1.7",   # Can remove once https://github.com/vispy/vispy/pull/2549 closes.
  "qtpy>=2.4.1",
]

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=3.7.0"]
universal = true

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
